# fastmulp

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release_core.yml
crates/fastmulp_core/: Cargo.toml
crates/fastmulp_core/benches/: parse.rs
crates/fastmulp_core/examples/: inspect.rs
crates/fastmulp_core/src/: .tests.rs.pending-snap  boundary.rs  boundary_scan.rs  error.rs  header.rs  lib.rs  parser.rs  part.rs  tests.rs  text.rs  util.rs
crates/fastmulp_core/src/content_disposition/: decode.rs  mod.rs
crates/fastmulp_core/tests/: content_type.rs  spec_invalid.rs  spec_valid.rs
crates/fastmulp_napi/: Cargo.toml
crates/fastmulp_napi/src/: lib.rs
crates/fastmulp_wasm/: Cargo.toml
crates/fastmulp_wasm/src/: lib.rs
scripts/: release.sh
