[workspace]
members = [
  "crates/fastmulp_core",
  "crates/fastmulp_napi",
  "crates/fastmulp_wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/mates-dev/fastmulp"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
js-sys = "0.3.91"
memchr = "2.8.0"
napi = { version = "3.8.3", default-features = false, features = ["napi8"] }
napi-derive = "3.5.2"
smallvec = { version = "1.15.1", features = ["const_generics"] }
wasm-bindgen = "0.2.114"
