[package]
name = "fastmulp-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bench]]
name = "parse"
harness = false

[dependencies]
memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
insta = "1.46.3"
